--- a/static/resource/css/order.css
+++ b/static/resource/css/order.css
@@ -404,7 +404,7 @@ tfoot tr td {
     border-left: 1px solid #e9e9e9;
     border-right: 1px solid #e9e9e9;
     line-height: 39px;
-    background: #fbfafa;
+    background-color: #f3f4f8 !important;
     font: bold 0.75em Verdana,Dotum,AppleGothic,sans-serif;
 }
 
