--- a/main/templates/common/header.html
+++ b/main/templates/common/header.html
@@ -89,6 +89,11 @@
                                내 프로필
                             </li>
                           </a>
+                         <a href="/coupon/">
+                              <li style="border-bottom:1px solid #dcdcdc;">
+                               쿠폰
+                            </li>
+                          </a>
                         <a href="/myorder/">
                             <li style="border-bottom:1px solid #dcdcdc;">
                                 주문내역
