--- a/main/templates/mypage/myorder_detail.html
+++ b/main/templates/mypage/myorder_detail.html
@@ -8,6 +8,7 @@
         <div class="tabs mypage">
             <ul>
                  <li><a href="/myprofile/">내 프로필</a></li>
+                <li><a href="/coupon/">내 쿠폰</a></li>
                  <li class="active"><a href="/myorder/">주문내역</a></li>
             </ul>
         </div>
