--- a/main/templates/login/login.html
+++ b/main/templates/login/login.html
@@ -54,6 +54,17 @@
 <script src="//cdn.jsdelivr.net/gh/stove99/jquery-modal-sample@v1.4/js/modal.js"></script>
 
 <script>
+
+    $(document).ready(function() {
+        var msg = {{msg}};
+        if(msg == 210)
+        {
+            $("#res_msg").text("로그인 세션이 만료 되었습니다. 다시 로그인 해주세요~");
+            $('div.modal').modal();
+            return false;
+        }
+    });
+
     function enterkey()
     {
         if (window.event.keyCode == 13) {
