코드 보안을 위한 작업

--- a/main/templates/common/head.html
+++ b/main/templates/common/head.html
@@ -3,6 +3,8 @@
 {% load static %}
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <META http-equiv="imagetoolbar" content="no">
+
     <title>머릿속 생각을 쉽게,뚝딱 런코딩</title>
     <meta name="description" content="">
     <meta name="Keywords" content="runcoding">
