--- a/main/templates/common/header.html
+++ b/main/templates/common/header.html
@@ -44,9 +44,21 @@
 
     }
 
+    function click() {
+     if((event.ctrlKey) || (event.shiftKey)) {
+        $("#res_msg").text("사용할 수 없습니다.");
+            $('div.modal').modal();
+            return false;
+     }
+   }
+    document.onmousedown=click;
+    document.onkeydown=click;
+
+
     // 우측 클릭 방지
     document.onmousedown=disableclick;
     status="오른쪽 마우스 사용을 할 수 없습니다.";
+
 
     function disableclick(event){
         if (event.button==2) {
