--- a/main/templates/myclass/myclass.html
+++ b/main/templates/myclass/myclass.html
@@ -23,7 +23,7 @@
                 <div class="detail_area">
                     <!-- 동영상 영역입니다. -->
                     <div class="video_area">
-                        <video id="video_ctrl" width ="100%" height="100%" controls controlsList="nodownload" src="" />
+                        <video id="video_ctrl" width ="100%" height="100%" controls autoplay controlsList="nodownload"  poster="" src="" />
                     </div>
 
                     <div class="precaution">
@@ -46,7 +46,6 @@
                         <div class="lecture_info">
                             <ul class="lectureList" id="accordion">
                                 <li class="active">
-<!--                                    <span class="section_title">강의 목록</span>-->
                                     <ul class="submenu">
                                          {% for item_detail in myclass_detail %}
                                        <li>
@@ -78,20 +77,6 @@
             }
          });
 
-        // 수량 더하기
-        function up(max) {
-            document.getElementById("prodQuantity").value = parseInt(document.getElementById("prodQuantity").value) + 1;
-            if (document.getElementById("prodQuantity").value >= parseInt(max)) {
-                document.getElementById("prodQuantity").value = max;
-            }
-        }
-        function down(min) {
-            document.getElementById("prodQuantity").value = parseInt(document.getElementById("prodQuantity").value) - 1;
-            if (document.getElementById("prodQuantity").value <= parseInt(min)) {
-                document.getElementById("prodQuantity").value = min;
-            }
-        }
-
         // accordion menu
         $(document).ready(function() {
             $("#accordion .section_title").click(function() {
@@ -112,6 +97,8 @@
                     closest_li.addClass("active");
                 }
             })
+
+            document.getElementById('video_ctrl').setAttribute('poster','/static/resource/img/sub/sv_myClass.png');
         });
 
         $(window).scroll(function() {
