수정사항 적용

--- a/main/templates/login/register.html
+++ b/main/templates/login/register.html
@@ -71,7 +71,7 @@
                         <div class="input_area">
                             <input type="checkbox" name="terms01" id="terms01" class="chk_terms" onClick="javascript:termFlag();" required>
                             <label for="terms01">이용약관에 동의합니다.</label>
-                            <a href="#" class="btn">내용 보기</a>
+                            <a href="#modal02" class="btn">내용 보기</a>
                         </div>
                     </div>
                     <h2>개인정보처리방침</h2>
@@ -79,7 +79,7 @@
                         <div class="input_area">
                             <input type="checkbox" name="terms02" id="terms02" class="chk_terms" required>
                             <label for="terms02">개인정보처리방침에 동의합니다.</label>
-                            <a href="#" class="btn">내용 보기</a>
+                            <a href="#modal01" class="btn">내용 보기</a>
                         </div>
                     </div>
                     <a href="javascript:void(0);" class="btn login" onClick="javascript:regi_submit();">회원가입</a>
