--- a/main/templates/myclass/myclass.html
+++ b/main/templates/myclass/myclass.html
@@ -26,7 +26,7 @@
                         <video id="video_ctrl" width ="100%" height="100%" controls autoplay controlsList="nodownload"  poster="" src="" />
                     </div>
 
-                    <div class="precaution">
+                    <div class="class_list_precaution">
                         <span class="summaryTitle">강의 자료실</span>
                         <ul>
                              {% for downData_info in downData %}
@@ -98,7 +98,7 @@
                 }
             })
 
-            document.getElementById('video_ctrl').setAttribute('poster','/static/resource/img/sub/sv_myClass.png');
+            document.getElementById('video_ctrl').setAttribute('poster','/static/resource/img/sub/myclass_preload.png');
         });
 
         $(window).scroll(function() {
