--- a/main/templates/common/header.html
+++ b/main/templates/common/header.html
@@ -101,8 +101,16 @@
                             </li>
                         </a>
                         <a href="/order/">
-                            <li style="border-bottom:1px solid #dcdcdc;">
+                            <li style="border-bottom:1px solid #dcdcdc; ">
+                                {% if request.session.order_count > 0 %}
+                                <div style="float:left; padding-right:5px;">장바구니 </div>
+                                <div class="img_order">
+                                    <img src="{% static 'resource/img/sub/ico_order.png' %}">
+                                    <div class="content">{{request.session.order_count}}</div>
+                                </div>
+                                {% else%}
                                 장바구니
+                                {% endif %}
                             </li>
                          </a>
                         <a href="/run_logout/">
