--- a/static/resource/css/common.css
+++ b/static/resource/css/common.css
@@ -872,3 +872,22 @@ youTubePlayer1 {position:relative;width:100%;padding-bottom:56.25%;}
 youTubePlayer1 iframe {position:absolute;width:100%;height:100%;}
 
 
+.img_order{
+    position: relative;
+    background-size: cover;
+}
+
+.img_order .content{
+     position: absolute;
+     padding-left:30px;
+     padding-top:3px;
+     top:50%;
+     left:50%;
+     transform: translate(-50%, -50%);
+     font-size:12px;
+     color: white;
+     z-index: 1;
+     text-align: center;
+}
+
+
